--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: "./.node-version"
+      - run: npm install
       - run: npx tsc
 
       - uses: actions/upload-pages-artifact@v3
