--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: "./.node-version"
-      - run: npm install
-      - run: npx tsc
+      - run: npm run build
 
       - uses: actions/upload-pages-artifact@v3
         with:
