--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version-file: "./.node-version"
       - run: npm install
+      - run: npm run test
       - run: npm run build
 
       - uses: actions/upload-pages-artifact@v3
